データベースの一部修正

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,10 +5,16 @@
 <title>教科書一覧</title>
 </head>
 <body>
-	<h1></h1>
+<!-- <header th:replace="header"></header> -->
 <form action="/home" method="get">
 	<input type="text" name="keyword" th:value="${keyword}" placeholder="キーワード検索">
 	<button>検索</button>
 </form>
+<div class="row">
+	<div class="col">
+		
+	</div>
+	
+</div>
 </body>
 </html>
