--- a/src/main/resources/templates/contactForm.html
+++ b/src/main/resources/templates/contactForm.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>お問い合わせフォーム</title>
 </head>
+
 <body>
 	<h1>お問い合わせフォーム</h1>
-	
+	<p th:if="${errorList}">
+		<div th:each="error:${errorList}" th:text="${error}" style="color:red;"></div>
+	</p>
 	<form action="/claim" method="post">
-	<textarea name="message" cols="30" rows="4"></textarea>	<br>
-	<button>送信</button>
+		<textarea name="message" cols="30" rows="4"></textarea> <br>
+		<button>送信</button>
+	</form>
 </body>
+
 </html>
