--- a/src/main/resources/templates/contactForm.html
+++ b/src/main/resources/templates/contactForm.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<header th:replace="header"></header>
 	<h1>お問い合わせフォーム</h1>
 	<p th:if="${errorList}">
 		<div th:each="error:${errorList}" th:text="${error}" style="color:red;"></div>
@@ -15,6 +16,7 @@
 		<textarea name="message" cols="30" rows="4"></textarea> <br>
 		<button>送信</button>
 	</form>
+	<footer th:replace="footer"></footer>
 </body>
 
 </html>
