--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -8,7 +8,7 @@
 	<header>
 		<h1>A大学教科書売買</h1>
 		
-		<a href="/">ログアウト</a> <br>
+		<a href="/" id="logoutButton" class="logout"><span>ログアウト</span></a>
 		
 		<a href="/home">商品一覧</a>
 		<a href="/item/add">出品申請</a>
@@ -16,6 +16,47 @@
 		<a href="/bbs">掲示板</a>
 		<a href="/Notice">通知</a>
 	</header>
+	
+	<!-- モーダルウィンドウ -->
+    <div id="logoutModal" class="modal">
+		<div class="modal-content">
+			<div class="modal-header">
+				<span class="close" id="closeModal">&times;</span>
+				<h2>確認</h2>
+			</div>
+			<div class="modal-body">
+				<p>本当にログアウトしますか？</p>
+			</div>
+			<div class="modal-footer">
+				<button id="confirmLogout" class="logoutbutton">ログアウト</button>
+				<button id="cancelLogout" class="cancelbutton">キャンセル</button>
+			</div>
+		</div>
+	</div>
+	<script type="text/javascript">
+		document.getElementById('logoutButton').onclick = function() {
+			document.getElementById('logoutModal').style.display = "block";
+		};
+
+		document.getElementById('closeModal').onclick = function() {
+			document.getElementById('logoutModal').style.display = "none";
+		};
+
+		document.getElementById('cancelLogout').onclick = function() {
+			document.getElementById('logoutModal').style.display = "none";
+		};
+
+		document.getElementById('confirmLogout').onclick = function() {
+			window.location.href = "/login";
+		};
+
+		window.onclick = function(event) {
+			if (event.target == document.getElementById('logoutModal')) {
+				document.getElementById('logoutModal').style.display = "none";
+			}
+		};
+	</script>
 
 </body>
+
 </html>
