--- a/src/main/resources/templates/resetIntroduce.html
+++ b/src/main/resources/templates/resetIntroduce.html
@@ -2,9 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>アカウント情報更新</title>
 </head>
 <body>
-
+	<h2>自己紹介メッセージ更新</h2>
+	<form action="/account/setIntroduce" method="post">
+	<table border="1">
+		<tr>
+			<th>学籍番号</th>
+			<td th:text="${studentNumber}"></td>
+		</tr>
+		<tr>
+			<th>自己紹介<br>メッセージ</th>
+			<td>
+				<textarea name="introduce"></textarea>
+			</td>
+		</tr>
+	</table>
+	<button>更新</button>
+	</form>
+	
 </body>
 </html>
