--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
 <title>教科書一覧</title>
 </head>
 <body>
-<!-- <header th:replace="header"></header> -->
+ <header th:replace="header"></header>
 <form action="/home" method="get">
 	<input type="text" name="keyword" th:value="${keyword}" placeholder="キーワード検索">
 	<button>検索</button>
