--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>Insert title here</title>
+	<link rel="stylesheet" type="text/css" href="/css/headerFooter.css">
 </head>
+
 <body>
 	<header>
 		<h1>A大学教科書売買</h1>
 		
-		<a href="/">ログアウト</a> <br>
-		
-		<a href="/home">商品一覧</a>
-		<a href="/item/add">出品申請</a>
-		<a href="/account">マイページ</a>
-		<a href="/bbs">掲示板</a>
-		<a href="/Notice">通知</a>
+		<a href="/" id="logout">ログアウト</a> <br>
+
+		<div id="header">
+			<a href="/home">商品一覧</a>
+			<a href="/item/add">出品申請</a>
+			<a href="/account">マイページ</a>
+			<a href="/bbs">掲示板</a>
+			<a href="/Notice">通知</a>
+		</div>
 	</header>
 
 </body>
+
 </html>
