--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>通知</title>
 	<link rel="stylesheet" type="text/css" href="/css/notice.css">
+	<link rel="stylesheet" type="text/css" href="/css/headerFooter.css">
 </head>
 
 <body>
