--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -12,7 +12,7 @@
 		<!--		ユーザーの情報を書くテーブル-->
 		<tr>
 			<th>学籍番号</th>
-			<td th:text="${user.studentNumber}"></td>
+			<td th:text="${user.studentNumber}" colspan="2"></td>
 		</tr>
 		<tr>
 			<th>パスワード</th>
