--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,26 +1,65 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
-	<meta charset="UTF-8">
+<meta charset="UTF-8">
 	<title>Insert title here</title>
 	<link rel="stylesheet" type="text/css" href="/css/headerFooter.css">
 </head>
-
 <body>
 	<header>
 		<h1>A大学教科書売買</h1>
 		
-		<a href="/" id="logout">ログアウト</a> <br>
-
+		<a href="/" id="logout" class="logout"><span>ログアウト</span></a><br>
+		
+		
 		<div id="header">
-			<a href="/home">商品一覧</a>
-			<a href="/item/add">出品申請</a>
-			<a href="/account">マイページ</a>
-			<a href="/bbs">掲示板</a>
-			<a href="/Notice">通知</a>
+		<a href="/home">商品一覧</a>
+		<a href="/item/add">出品申請</a>
+		<a href="/account">マイページ</a>
+		<a href="/bbs">掲示板</a>
+		<a href="/Notice">通知</a>
 		</div>
 	</header>
+	
+	<!-- モーダルウィンドウ -->
+    <div id="logoutModal" class="modal">
+		<div class="modal-content">
+			<div class="modal-header">
+				<span class="close" id="closeModal">&times;</span>
+				<h2>確認</h2>
+			</div>
+			<div class="modal-body">
+				<p>本当にログアウトしますか？</p>
+			</div>
+			<div class="modal-footer">
+				<button id="confirmLogout" class="logoutbutton">ログアウト</button>
+				<button id="cancelLogout" class="cancelbutton">キャンセル</button>
+			</div>
+		</div>
+	</div>
+	<script type="text/javascript">
+		document.getElementById('logout').onclick = function() {
+			document.getElementById('logoutModal').style.display = "block";
+		};
+
+		document.getElementById('closeModal').onclick = function() {
+			document.getElementById('logoutModal').style.display = "none";
+		};
+
+		document.getElementById('cancelLogout').onclick = function() {
+			document.getElementById('logoutModal').style.display = "none";
+		};
+
+		document.getElementById('confirmLogout').onclick = function() {
+			window.location.href = "/login";
+		};
+
+		window.onclick = function(event) {
+			if (event.target == document.getElementById('logoutModal')) {
+				document.getElementById('logoutModal').style.display = "none";
+			}
+		};
+	</script>
 
 </body>
 
