ログイン処理に関する修正

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -17,7 +17,7 @@ header {
 
 /*入力フォーム*/
 input {
-  width: 100px;/*横幅*/
+  width: 40%;/*横幅*/
   padding: 10px;/*内側余白*/
   margin-bottom: 30px;/*外側余白（下）*/
   border: 1px solid #ccc;/*線の太さ、色*/
@@ -26,7 +26,7 @@ input {
 
 /*登録ボタン*/
 button[type="submit"] {
-	width: 50px;/*横幅*/
+	width: 30%;/*横幅*/
 	padding: 10px;/*内側余白*/
 	background-color: aqua;/*背景色*/
 	color: black;/*文字の色*/
@@ -40,3 +40,15 @@ button[type="submit"]:hover {
 	background-color: aquamarine;
 	color: black;
 }
+
+/*四角の枠*/
+/*.container {*/
+/*  width: 400px;*/
+/*  height: 400px;*/
+/*  margin: 0 auto;*/
+/*  padding: 20px;*/
+/*  background-color: rgb(0, 0, 0);*/
+/*  border: 1px solid #ccc;*/
+/*  border-radius: 5px;*/
+/*  background-color: rgb(0, 0, 0,40%);*/
+/*  }*/
