--- a/src/main/resources/templates/admin/addTextbook.html
+++ b/src/main/resources/templates/admin/addTextbook.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>教科書登録</title>
-</head>
-<body>
-<h1>教科書登録</h1>
 
+<head>
+	<meta charset="UTF-8">
+	<title>教科書登録</title>
+</head>
+
+<body>
+	<h1>教科書登録</h1>
+	<form action="/admin/addTextbook" method="post">
+		<table border="1">
+			<tr>
+				<td>タイトル</td>
+				<td><input type="text" name="title" th:value="${title}"></td>
+			</tr>
+			<tr>
+				<td>価格</td>
+				<td><input type="number" name="price" th:value="${price}"></td>
+			</tr>
+			<tr>
+				<td>著者</td>
+				<td><input type="text" name="author" th:value="${author}"></td>
+			</tr>
+			<tr>
+				<td>出版社</td>
+				<td><input type="text" name="publisher" th:value="${publisher}"></td>
+			</tr>
+		</table>
+		<button>登録</button>
+	</form>
 </body>
+
 </html>
