--- a/src/main/resources/templates/admin/request.html
+++ b/src/main/resources/templates/admin/request.html
@@ -15,7 +15,8 @@
 			<th>確認</th>
 		</tr>
 		<tr th:each="item:${items}">
-			<td th:each="textbook:${textbooks}" th:if="${item.textbookId == textbook.id}" th:text="${textbook.title}"></td>
+			<td th:each="textbook:${textbooks}" th:if="${item.textbookId == textbook.id}" th:text="${textbook.title}">
+			</td>
 			<td th:each="user:${users}" th:if="${item.sellerId == user.id}" th:text="${user.studentNumber}"></td>
 			<td>
 				<form th:action="'/admin/request/' + ${item.id}" method="get">
