--- a/src/main/resources/templates/admin/addTextbook.html
+++ b/src/main/resources/templates/admin/addTextbook.html
@@ -8,6 +8,7 @@
 
 <body>
 	<h1>教科書登録</h1>
+	<span th:utext="${msg}"></span>
 	<form action="/admin/addTextbook" method="post">
 		<table border="1">
 			<tr>
