--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>教科書一覧</title>
+<link rel="stylesheet" type="text/css" href="/css/home.css"/>
 </head>
 <body>
  <header th:replace="header"></header>
@@ -11,9 +12,25 @@
 	<button>検索</button>
 </form>
 <div class="row">
-	<div class="col">
-		
-	</div>
+  <div class="col">
+    <div class="num">1</div>
+  </div>
+  <div class="col">
+    <div class="num">2</div>
+  </div>
+  <div class="col">
+    <div class="num">3</div>
+  </div>
+  <div class="col">
+    <div class="num">4</div>
+  </div>
+  <div class="col">
+    <div class="num">5</div>
+  </div>
+  <div class="col">
+    <div class="num">6</div>
+  </div>
+</div>
 	
 </div>
 </body>
