--- a/src/main/resources/templates/addRequest.html
+++ b/src/main/resources/templates/addRequest.html
@@ -25,7 +25,8 @@
 			<td>
 				<select name = "title">
 					<option value="" disabled selected>タイトル名</option>
-					<option th:each = "requests:${textbook_id}" th:value="" th:text= "${textbooks.title}"></option>
+					<option th:each = "textbook:${title}" th:value="${textbook.id}" th:text= "${textbook.title}"></option>
+				</select>
 				
 <!--						<th:block th:each = "requests:${item_id}">-->
 <!--					<option th:value = "" th:text = "${textbooks.title}"></option>-->
