--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -9,7 +9,7 @@
 	<header>
 		<h1>A大学教科書売買</h1>
 		
-		<a href="/" id="logout" class="logout"><span>ログアウト</span></a><br>
+		<a href="#" id="logout" class="logout"><span>ログアウト</span></a><br>
 		
 		
 		<div id="header">
@@ -51,7 +51,7 @@
 		};
 
 		document.getElementById('confirmLogout').onclick = function() {
-			window.location.href = "/login";
+			window.location.href = "/";
 		};
 
 		window.onclick = function(event) {
