--- a/src/main/resources/templates/setPassword.html
+++ b/src/main/resources/templates/setPassword.html
@@ -5,6 +5,9 @@
 <title>パスワード変更画面</title>
 </head>
 <body>
+	<ul th:if="${errorList}" th:each="error:${errorList}">
+		<li th:text="${error}"></li>
+	</ul>
 	<table border="1">
 		<tbody>
 		<tr>
@@ -15,7 +18,7 @@
 			<form action="/account/setPassword" method="post">
 				<textboxA>
 					<p>パスワード</p>
-					<input type="text" name="oldpassword">
+					<input type="text" name="oldPassword">
 				</textboxA>
 				<textboxB>
 					<p>新しいパスワード</p>
@@ -23,7 +26,7 @@
 				</textboxB>
 				<textboxC>
 					<p>確認用パスワード</p>
-					<input type="text" name="reNewPasseord">
+					<input type="text" name="reNewPassword">
 				</textboxC>
 				<br>
 				<button>変更</button>
