--- a/src/main/resources/static/css/headerFooter.css
+++ b/src/main/resources/static/css/headerFooter.css
@@ -75,12 +75,14 @@ header h1 {
 
 /*モーダルウィンドウの表示*/
 .modal-content{
-	background-color: #6699FF;
+	background-color: azure;
 	margin: 20% auto;
-	width: 30%;
+	width: 35%;
 	box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
 	animation-name: modalopen;
 	animation-duration: 1s;
+	text-align: center;
+	font-weight: bold;
 }
 
 /*モーダルウィンドウ内のヘッダーの文字*/
@@ -89,10 +91,83 @@ header h1 {
 }
 /*モーダルウィンドウ内のヘッダー*/
 .modal-header {
-	background-color: aquamarine;
-	padding:3px 5px;
+	background-color: aqua;
+	padding:1px 1px;
 	display: flex;
 	justify-content: flex-start;
+}
+
+/*モーダルウィンドウ内のフッター*/
+.modal-footer{
+	padding: 10px 16px;
+	background-color: azure;
+	color: #000000;
+	text-align: center;
+}
+
+/*閉じるボタン*/
+.close{
+	color: black;
+	float: right;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+/*閉じるボタン（マウスオーバー時）*/
+.close:hover{
+	cursor: pointer;
+}
+
+/*閉じるボタン*/
+.close:focus{
+	color: white;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+/*モーダルウィンドウ内のボディの余白*/
+.modal-body{
+	padding: 20px 20px;
+}
+
+/*ログアウトボタン*/
+.logoutbutton{
+	margin: 10px;
+	padding: 5px 20px;
+	background-color: aqua;
+	color: black;
+	border: none;
+	width: 150px;
+	cursor: pointer;
+	border-radius: 10px;
+	font-weight: bold;
+}
+
+/*ログアウトボタン（マウスオーバー時）*/
+.logoutbutton:hover{
+	background-color: aquamarine;
+	color: black;
+	font-weight: bold;
+}
+
+/*キャンセルボタン*/
+.cancelbutton{
+	margin: 10px;
+	padding: 5px 20px;
+	background-color: aqua;
+	color: black;
+	border: none;
+	width: 150px;
+	cursor: pointer;
+	border-radius: 10px;
+	font-weight: bold;
+}
+
+/*キャンセルボタン（マウスオーバー時）*/
+.cancelbutton:hover{
+	background-color: aquamarine;
+	color: black;
+	font-weight: bold;
 }
 
 
