--- a/src/main/resources/templates/setPassword.html
+++ b/src/main/resources/templates/setPassword.html
@@ -3,8 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>パスワード変更画面</title>
+	<link rel="stylesheet" type="text/css" href="/css/headerFooter.css">
+	<link rel="stylesheet" type="text/css" href="/css/mypage.css">
 </head>
 <body>
+	<header th:replace="header"></header>
 	<ul th:if="${errorList}" th:each="error:${errorList}">
 		<li th:text="${error}"></li>
 	</ul>
@@ -35,5 +38,6 @@
 		</tr>
 		</tbody>
 	</table>
+	<footer th:replace="footer"></footer>
 </body>
 </html>
