--- a/src/main/resources/templates/resetIntroduce.html
+++ b/src/main/resources/templates/resetIntroduce.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+	
 <head>
 <meta charset="UTF-8">
 <title>アカウント情報更新</title>
+<link rel="stylesheet" type="text/css" href="/css/headerFooter.css">
+<link rel="stylesheet" type="text/css" href="/css/mypage.css">
 </head>
 <body>
+	<header th:replace="header"></header>
 	<h2>自己紹介メッセージ更新</h2>
 	<form action="/account/setIntroduce" method="post">
 	<table border="1">
@@ -21,6 +25,6 @@
 	</table>
 	<button>更新</button>
 	</form>
-	
+	<footer th:replace="footer"></footer>
 </body>
 </html>
