--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -8,6 +8,7 @@
                 width: 900px;
             }
         </style>
+        <link rel="stylesheet" type="text/css" href="/css/login.css"/>
 </head>
 <body>
 <header th:replace="header"></header>
