--- a/src/main/resources/templates/admin/addTextbook.html
+++ b/src/main/resources/templates/admin/addTextbook.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<header th:replace="header"></header>
 	<h1>教科書登録</h1>
 	<span th:utext="${msg}"></span>
 	<form action="/admin/addTextbook" method="post">
@@ -17,7 +18,8 @@
 			</tr>
 			<tr>
 				<td>価格</td>
-				<td><input type="number" name="price" th:value="${price}" min="0" th:if="${price}"><input type="number" name="price" value="0" min="0" th:if="!${price}"></td>
+				<td><input type="number" name="price" th:value="${price}" min="0" th:if="${price}"><input type="number"
+						name="price" value="0" min="0" th:if="!${price}"></td>
 			</tr>
 			<tr>
 				<td>著者</td>
@@ -30,6 +32,7 @@
 		</table>
 		<button>登録</button>
 	</form>
+	<footer th:replace="footer"></footer>
 </body>
 
 </html>
