--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -7,11 +7,13 @@
 </head>
 
 <body>
+	<header th:replace="header"></header>
 	<h1>管理者画面</h1>
 	<button onclick="location.href='/admin/user'">ユーザー管理</button>
 	<button onclick="location.href='/admin/request'">出品申請管理<span th:if="${requestCount} > 0"
 			style="color: red;">!</span></button>
 	<button onclick="location.href='/admin/addTextbook'">教科書の登録</button>
+	<footer th:replace="footer"></footer>
 </body>
 
 </html>
