--- a/src/main/resources/templates/admin/request.html
+++ b/src/main/resources/templates/admin/request.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<header th:replace="header"></header>
 	<h1>出品申請一覧</h1>
 	<table th:if="${items}" border="1">
 		<tr>
@@ -26,6 +27,7 @@
 		</tr>
 	</table>
 	<p th:if="!${items}">出品申請はありません</p>
+	<footer th:replace="footer"></footer>
 </body>
 
 </html>
