--- a/src/main/resources/templates/setPassword.html
+++ b/src/main/resources/templates/setPassword.html
@@ -8,29 +8,30 @@
 </head>
 <body>
 	<header th:replace="header"></header>
+	<main>
+	<br>
+	<br>
 	<ul th:if="${errorList}" th:each="error:${errorList}">
 		<li th:text="${error}"></li>
 	</ul>
-	<table border="1">
+	<table border="1" id="table">
 		<tbody>
 		<tr>
-			<th><h2>パスワード変更</h2></th>
+			<th class="tabletitle"><h2>パスワード変更</h2></th>
 		</tr>
 		<tr>
 			<td>
-			<form action="/account/setPassword" method="post">
-				<textboxA>
-					<p>パスワード</p>
+			<form action="/account/setPassword" method="post" class="table">
+				<textbox>
+					<p class="title">パスワード</p>
 					<input type="text" name="oldPassword">
-				</textboxA>
-				<textboxB>
-					<p>新しいパスワード</p>
+					<br>
+					<p class="title">新しいパスワード</p>
 					<input type="text" name="newPassword">
-				</textboxB>
-				<textboxC>
-					<p>確認用パスワード</p>
+					<br>
+					<p class="title">確認用パスワード</p>
 					<input type="text" name="reNewPassword">
-				</textboxC>
+				</textbox>
 				<br>
 				<button>変更</button>
 			</form>
@@ -38,6 +39,11 @@
 		</tr>
 		</tbody>
 	</table>
+	
+	<br>
+	<br>
+	<br>
+	</main>
 	<footer th:replace="footer"></footer>
 </body>
 </html>
