--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,22 +11,22 @@
 <body>
 	<input type="hidden" th:value="${@account.userStatus}" name="userStatus">
 	<header id="Header">
-		<h1>A大学教科書売買</h1>
+		<div class="sitetitle">
+			<h1>A大学教科書売買</h1>
 
-		<a href="#" id="logout" class="logout"><span>ログアウト</span></a><br>
+			<p class="logout"><a href="#" id="logout"><span>ログアウト</span></a><br></p>
+		</div>
 
+		<br>
 
 		<div id="header">
-			<a href="/home">商品一覧</a>
-			<a href="/item/add" th:if="!${@account.userStatus == 1}">出品申請</a>
-			<a href="/account" th:if="!${@account.userStatus == 1}">マイページ</a>
-			<a href="/bbs">掲示板</a>
-			<a href="/Notice" th:if="!${@account.userStatus == 1}">通知<span th:if="!${@account.noticeCount == 0}"
-					style="color: red;">!</span></a>
-			<a href="/admin/claim" th:if="${@account.userStatus == 1}">問い合わせ確認<span th:if="!${@account.claimCount == 0}"
-					style="color: red;">!</span></a>
-			<a href="/admin" th:if="${@account.userStatus == 1}">管理者画面</a>
-
+			<a href="/home" class="menu">商品一覧</a><a href="/item/add" th:if="!${@account.userStatus == 1}"
+				class="menu">出品申請</a><a href="/account" th:if="!${@account.userStatus == 1}" class="menu">マイページ</a><a
+				href="/bbs" class="menu">掲示板</a><a href="/Notice" th:if="!${@account.userStatus == 1}"
+				class="menu">通知<span th:if="!${@account.noticeCount == 0}" style="color: red;">!</span></a><a
+				href="/admin/claim" th:if="${@account.userStatus == 1}" class="menu">問い合わせ確認<span
+					th:if="!${@account.claimCount == 0}" style="color: red;">!</span></a><a href="/admin"
+				th:if="${@account.userStatus == 1}" class="menu">管理者画面</a>
 		</div>
 	</header>
 
