--- a/src/main/resources/templates/admin/addTextbook.html
+++ b/src/main/resources/templates/admin/addTextbook.html
@@ -4,35 +4,38 @@
 <head>
 	<meta charset="UTF-8">
 	<title>教科書登録</title>
+	<link rel="stylesheet" type="text/css" href="/css/admin.css" />
 </head>
 
 <body>
 	<header th:replace="header"></header>
-	<h1>教科書登録</h1>
-	<span th:utext="${msg}"></span>
-	<form action="/admin/addTextbook" method="post">
-		<table border="1">
-			<tr>
-				<td>タイトル</td>
-				<td><input type="text" name="title" th:value="${title}"></td>
-			</tr>
-			<tr>
-				<td>価格</td>
-				<td><input type="number" name="price" th:value="${price}" min="0" th:if="${price}"><input type="number"
-						name="price" value="0" min="0" th:if="!${price}"></td>
-			</tr>
-			<tr>
-				<td>著者</td>
-				<td><input type="text" name="author" th:value="${author}"></td>
-			</tr>
-			<tr>
-				<td>出版社</td>
-				<td><input type="text" name="publisher" th:value="${publisher}"></td>
-			</tr>
-		</table>
-		<button>登録</button>
-	</form>
-	<footer th:replace="footer"></footer>
+	<main>
+		<h1>教科書登録</h1>
+		<span th:utext="${msg}"></span>
+		<form action="/admin/addTextbook" method="post">
+			<table border="1">
+				<tr>
+					<td>タイトル</td>
+					<td><input type="text" name="title" th:value="${title}"></td>
+				</tr>
+				<tr>
+					<td>価格</td>
+					<td><input type="number" name="price" th:value="${price}" min="0" th:if="${price}"><input
+							type="number" name="price" value="0" min="0" th:if="!${price}"></td>
+				</tr>
+				<tr>
+					<td>著者</td>
+					<td><input type="text" name="author" th:value="${author}"></td>
+				</tr>
+				<tr>
+					<td>出版社</td>
+					<td><input type="text" name="publisher" th:value="${publisher}"></td>
+				</tr>
+			</table>
+			<button>登録</button>
+		</form>
+		<footer th:replace="footer"></footer>
+	</main>
 </body>
 
 </html>
