--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -4,16 +4,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>管理者画面</title>
+	<link rel="stylesheet" type="text/css" href="/css/admin.css" />
 </head>
 
 <body>
 	<header th:replace="header"></header>
-	<h1>管理者画面</h1>
-	<button onclick="location.href='/admin/user'">ユーザー管理</button>
-	<button onclick="location.href='/admin/request'">出品申請管理<span th:if="${requestCount} > 0"
-			style="color: red;">!</span></button>
-	<button onclick="location.href='/admin/addTextbook'">教科書の登録</button>
-	<footer th:replace="footer"></footer>
+	<main>
+		<h1>管理者画面</h1>
+		<button class="adminMenu" onclick="location.href='/admin/user'">ユーザー管理</button><br>
+		<button class="adminMenu" onclick="location.href='/admin/request'">出品申請管理<span th:if="${requestCount} > 0"
+				style="color: red;">!</span></button><br>
+		<button class="adminMenu" onclick="location.href='/admin/addTextbook'">教科書の登録</button>
+		<footer th:replace="footer"></footer>
+	</main>
 </body>
 
 </html>
