--- a/src/main/resources/templates/admin/claim.html
+++ b/src/main/resources/templates/admin/claim.html
@@ -4,10 +4,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>お問い合わせ確認</title>
+	<link rel="stylesheet" type="text/css" href="/css/admin.css" />
 </head>
 
 <body>
 	<header th:replace="header"></header>
+	<main>
 	<h1>お問い合わせ確認</h1>
 	<table border="1">
 		<tr>
@@ -17,14 +19,15 @@
 		<tr th:each="claim:${claims}">
 			<th:block th:if="${claim.claimStatus == 1}">
 				<td th:text="${claim.id}" style="color: red;"></td>
-				<td th:text="${claim.message}" style="color: red;"></td>
+				<td class="msg" th:text="${claim.message}" style="color: red;"></td>
 			</th:block>
 			<th:block th:if="${claim.claimStatus == 2}">
 				<td th:text="${claim.id}"></td>
-				<td th:text="${claim.message}"></td>
+				<td class="msg" th:text="${claim.message}"></td>
 			</th:block>
 		</tr>
 	</table>
+	</main>
 	<footer th:replace="footer"></footer>
 </body>
 
