--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -10,5 +10,6 @@
 <form action="/home" method="get">
 <button type="submit">OK</button>
 </form>
+<footer th:replace="footer"></footer>
 </body>
 </html>
