--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -10,6 +10,10 @@ body {
 	/* 最小幅 */
 }
 
+.title {
+	font-size: 30px;
+}
+
 /*入力フォーム*/
 input {
 	width: 80%;
@@ -18,11 +22,40 @@ input {
 	/*線の太さ、色*/
 	border-radius: 4px;
 	/*角の丸み*/
+	font-size: 20px;
+	margin: 2px;
 }
 
 /*ボタン*/
 button.adminMenu {
 	width: 60%;
+	/*横幅*/
+	padding: 10px;
+	/*内側余白*/
+	background-color: rgb(255, 57, 0);
+	/*背景色*/
+	color: black;
+	/*文字の色*/
+	border: none;
+	border-radius: 4px;
+	/*角の丸み*/
+	cursor: pointer;
+	font-size: 200%;
+	margin: 1%;
+}
+
+button.list {
+	padding: 5px;
+	background-color: rgb(255, 57, 0);
+	color: white;
+	border: none;
+	border-radius: 3px;
+	margin: 3px;
+	cursor: pointer;
+}
+
+button.itemStatus {
+	width: 15%;
 	/*横幅*/
 	padding: 10px;
 	/*内側余白*/
@@ -47,6 +80,7 @@ main button:hover {
 table {
 	margin: auto;
 	white-space: pre-line;
+	font-size: 20px;
 }
 
 .msg {
@@ -61,4 +95,13 @@ table {
 td {
 	width: fit-content;
 	height: fit-content;
+}
+
+.search-form {
+	display: inline-block;
+}
+
+.search-button {
+	vertical-align: top;
+	margin-left: 10px;
 }
