--- a/src/main/resources/static/css/headerFooter.css
+++ b/src/main/resources/static/css/headerFooter.css
@@ -37,6 +37,10 @@ header {
 	margin-top: 0;
 }
 
+.alate {
+  -webkit-text-stroke-width: 0.3px;
+  -webkit-text-stroke-color:white;
+}
 
 header h1 {
 	font-size: 40px;
