--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -12,8 +12,8 @@
 	<main>
 		<h1>管理者画面</h1>
 		<button class="adminMenu" onclick="location.href='/admin/user'">ユーザー管理</button><br>
-		<button class="adminMenu" onclick="location.href='/admin/request'">出品申請管理<span th:if="${requestCount} > 0"
-				style="color: red;">!</span></button><br>
+		<button class="adminMenu" onclick="location.href='/admin/request'" style="text-decoration:none;">出品申請管理<span th:if="${requestCount} > 0"
+				style="color: red;" class="alate">!</span></button><br>
 		<button class="adminMenu" onclick="location.href='/admin/addTextbook'">教科書の登録</button>
 		<footer th:replace="footer"></footer>
 	</main>
